RESOLVED FIXED241256
[LFC][FFC] FlexLayout should not use non-logical intrinsic widths
https://bugs.webkit.org/show_bug.cgi?id=241256
Summary [LFC][FFC] FlexLayout should not use non-logical intrinsic widths
alan
Reported 2022-06-02 21:32:21 PDT
ssia
Attachments
Patch (9.19 KB, patch)
2022-06-02 21:37 PDT, alan
ews-feeder: commit-queue-
alan
Comment 1 2022-06-02 21:37:43 PDT
EWS
Comment 2 2022-06-03 08:04:03 PDT
Committed r295208 (251265@main): <https://commits.webkit.org/251265@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 459989 [details].
Radar WebKit Bug Importer
Comment 3 2022-06-03 08:05:13 PDT
Note You need to log in before you can comment on or make changes to this bug.