FlexLayout should not use non-logical intrinsic widths https://bugs.webkit.org/show_bug.cgi?id=241256

Reviewed by Antti Koivisto.

This is in preparation for using logical-intrinsic widths in flex layout.

* Source/WebCore/layout/FormattingState.h:
* Source/WebCore/layout/formattingContexts/flex/FlexFormattingContext.cpp:
(WebCore::Layout::FlexFormattingContext::convertFlexItemsToLogicalSpace):
(WebCore::Layout::FlexFormattingContext::layoutInFlowContentForIntegration):
* Source/WebCore/layout/formattingContexts/flex/FlexLayout.cpp:
(WebCore::Layout::FlexLayout::FlexLayout):
(WebCore::Layout::FlexLayout::computeLogicalWidthForShrinkingFlexItems):
(WebCore::Layout::FlexLayout::computeLogicalWidthForStretchingFlexItems):
* Source/WebCore/layout/formattingContexts/flex/FlexLayout.h:
(WebCore::Layout::FlexLayout::LogicalFlexItem::minimumContentWidth const):
(WebCore::Layout::FlexLayout::LogicalFlexItem::LogicalFlexItem):
(WebCore::Layout::FlexLayout::formattingState const): Deleted.

Canonical link: https://commits.webkit.org/251265@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295208 268f45cc-cd09-0410-ab3c-d52691b4dbfc